# DWH-Helper

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  dwh.db  pyproject.toml
.github/workflows/: deploy.yaml
ai_docs/: amplitude.md  appmetrica.md  auth.md  config.md  database_connector.md  deploy.md  dwh_tables_worker.md  prosessor.md  requirentments.md  s3.md  yandex_metrica.md  ym_table_creation_scripts.md
app/: __init__.py  config.py  main.py
app/amplitude/: __init__.py  client.py  export_utils.py  router.py
app/appmetrica/: client.py  router.py
app/auth/: deps.py  schemas.py
app/config/: __init__.py  logger.py  settings.py
app/db/: repository.py  router.py
app/dwh_tables_worker/: repository.py  router.py  schemas.py  storage.py
app/etl/: __init__.py  field_mappings.yaml  orchestrator.py  router.py  schemas.py  services.py  transformer.py
app/processor/: __init__.py  orchestrator.py  router.py  schemas.py  transformer.py
app/s3/: __init__.py  client.py  router.py
app/yandex_metrika/: ad_efficiency.py  client.py  router.py  schemas.py  service.py  services.py
