[tool.poetry]
name = "dwh-helper"
version = "0.1.0"
description = "DWH Helper - product analytics data helper"
authors = ["Andrey Levchenko <aa.levchenko@severmed.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.13.7,<4.0"
fastapi = "^0.101.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.0.0"
uvicorn = "^0.23.2"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"
boto3 = "^1.34.0"
python-multipart = "^0.0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
